|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-02-08 Benedikt Heintel
	- LANGUAGES:
		Spanish: added missing language strings

2007-02-08 Laurent DECLERCQ
	- ENGINE:
		Fixed bug #48 :
			=> Edit "vhcs2-dmn-mngr
				- Instructions disabled for Master user

	- SETUP:
		Fixed bug #48 :
			=> Edit vhcs-setup
				- added new Subroutine --> create "php4" and "php5" directory for Master User

2007-02-07 Laurent DECLERCQ
	- CONFIGS:
		Fixed bug #48 :
			=> Edit "fastcgi.conf" (NO FINISH)
				- Rename fastcgi.conf in fastcgi.conf.bak
				- Create new fastcgi.conf (testing file)

			=> Edit "httpd.conf" and "vhcs2_base.tpl" :
				- Remove Handler "default-vhcs"

			=> Create new directory "master" for the files of configuration (fascgi) of the user master.
			=> Copy and move "php4-fcgi-starter" and "php5-fcgi-starter" in "master" directory for the master user
			=> Create "php4" and "php5" directory in master "directory" for master user
			=> Copy and move  "php4.ini" in "php4"  in "php4" directory for master user
			=> Copy and move  "php5.ini" in "php4"  in "php5" directory for master user
			=> Rename "php4.ini" "and php5.ini" in "php.ini" for master user
			=> Edit "php.ini" files for master user :
				- Fixed "open_basedir" path for master user
				- Fixed "upload_dir" path for master user
				- Fixed "session_dir" path for master user
			=> Copy, move "php4-fcgi-starter" and "php5-fcgi-starter" in "master" directory for the master user

	- SETUP:
		Fixed bug #48 :
			=> Edit makefile :
				- Added "phptmp" directory
			=> Edit "vhcs2.setup" script :
				- Fixed path for the new tpl directory "master"
				- Changed path and rename "php4.ini" in "php.ini" (for master user)
				- Changed path and rename "php5.ini" in "php.ini" (for master user)