@@ -1,4 +1,4 @@
-         
+
 .include <Makefile.inc>
 
 install:
@@ -8,24 +8,26 @@ install:
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_LOG)
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_LOG)/vhcs2-arpl-msgr
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_VIRTUAL)
+	$(SYSTEM_MAKE_DIRS) $(SYSTEM_FCGI)
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_MAIL_VIRTUAL)
 	$(SYSTEM_MAKE_DIRS) $(SYSTEM_APACHE_BACK_LOG)
 	cd ./configs && $(MAKE) install
-	cd ./engine && $(MAKE) install 
-	cd ./gui && $(MAKE) install 
+	cd ./engine && $(MAKE) install
+	cd ./gui && $(MAKE) install
 	cd ./keys && $(MAKE) install
-	
+
 uninstall:
 	cd ./tools && $(MAKE) uninstall
 	cd ./configs && $(MAKE) uninstall
-	cd ./engine && $(MAKE) uninstall 
-	cd ./gui && $(MAKE) uninstall 
+	cd ./engine && $(MAKE) uninstall
+	cd ./gui && $(MAKE) uninstall
 	cd ./keys && $(MAKE) uninstall
 	rm -rf $(SYSTEM_CONF)
 	rm -rf $(SYSTEM_ROOT)
 	rm -rf $(SYSTEM_LOG)
 	rm -rf $(SYSTEM_VIRTUAL)
+	rm -rf $(SYSTEM_FCGI)
 	rm -rf $(SYSTEM_MAIL_VIRTUAL)
 	rm -rf $(SYSTEM_APACHE_BACK_LOG)
 	rm -rf ./*~
-	
+
